cisa service update markup

--- a/lock_replacement.html
+++ b/lock_replacement.html
@@ -886,20 +886,14 @@
                         </div>
 
                         <div class="col-auto ml-auto d-none d-lg-block order-sm-2">
-                            <!-- todo: counters -->
                             <div class="footer-counters">
-                                counters
+                                <!-- counters block -->
                             </div>
                         </div>
 
                         <div class="col-sm col-lg-auto order-sm-3">
                             <div class="footer-develop ml-auto">
-                                <div class="develop-content">
-                                    Разработка сайтов и продвижение в поисковых системах. ООО "Диол"
-                                </div>
-                                <div class="develop-media">
-                                    <img src="./images/diol.svg" alt="Diol">
-                                </div>
+                                <!-- develop block -->
                             </div>
                         </div>
                     </div>
